@startuml
'namespace EtAlii.Generators.MicroMachine.Tests
'class ParameterStateMachineBase
'using EtAlii.Generators.MicroMachine.Tests.Nested

[*] -up--> State1 : Continue1
State1 -right-> NextState1 << (string title, int count) >> : Activate1
note top on link
Transition towards another state with NAMED parameters.
--
- Supports Standard .NET types like string, int, float etc.
end note


[*] -right-> State2 : Continue2
State2 -right-> NextState2 << (string, int, float) >> : Activate2
note top on link
Transition towards another state with UNNAMED parameters.
--
- Supports Standard .NET types like string, int, float etc.
- Gives a compiler warning as the method parameter
names will be generated from the type names.
end note


[*] -down--> State3 : Continue3

State3 -right-> NextState3 << (Customer customer, Project project) >> : Activate3
note top on link
Transition towards another state with custom parameter types.
--
- All custom types are supported
- Just don't forget to include their namespace in the header of the file.
end note

@enduml

